; ModuleID = '/home/carl/AnghaBench/twemproxy/src/extr_nc_conf.c_conf_event_done.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/extr_nc_conf.c_conf_event_done.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.conf = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.conf*)* @conf_event_done to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @conf_event_done(%struct.conf* %0) #0 {
  %2 = alloca %struct.conf*, align 8
  store %struct.conf* %0, %struct.conf** %2, align 8
  %3 = load %struct.conf*, %struct.conf** %2, align 8
  %4 = getelementptr inbounds %struct.conf, %struct.conf* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %13

7:                                                ; preds = %1
  %8 = load %struct.conf*, %struct.conf** %2, align 8
  %9 = getelementptr inbounds %struct.conf, %struct.conf* %8, i32 0, i32 1
  %10 = call i32 @yaml_event_delete(i32* %9)
  %11 = load %struct.conf*, %struct.conf** %2, align 8
  %12 = getelementptr inbounds %struct.conf, %struct.conf* %11, i32 0, i32 0
  store i64 0, i64* %12, align 8
  br label %13

13:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @yaml_event_delete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
